--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,8 @@
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^6.2",
         "symfony/stopwatch": "6.0.*",
-        "symfony/web-profiler-bundle": "6.0.*"
+        "symfony/web-profiler-bundle": "6.0.*",
+        "zenstruck/foundry": "^1.31"
     },
     "config": {
         "allow-plugins": {
