--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/webpack-encore": "^4.0.0",
         "core-js": "^3.23.0",
+        "file-loader": "^6.0.0",
         "regenerator-runtime": "^0.13.9",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
@@ -18,5 +19,11 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "autoprefixer": "^10.4.14",
+        "bootstrap": "^5.2.3",
+        "jquery": "^3.6.4",
+        "sass-loader": "^13.2.2"
     }
 }
